# nhl-goals-predictor

./: .gitignore  AGENTS.md  CLAUDE.md  IMPROVEMENTS.md  MODEL_CARD.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-extras.txt  requirements.txt
.github/workflows/: ci.yml
models/: README.md
notebooks/: eda.ipynb
reports/releases/benchmark-v1/: champion_model_report.json  champion_model_report.md  manifest.json  source_notes.json  technical_report.md
scripts/: eval_playoffs_2026.py  validate_release.py
src/: __init__.py  analysis.py  api.py  artifacts.py  benchmark.py  champion.py  config.py  conformal.py  data.py  decision.py  double_poisson.py  evaluate.py  evaluation.py  explain.py  explainability.py  features.py  goalies.py  http_client.py  live.py  logging_config.py  metrics.py  model.py  monitoring.py  portfolio.py  predict.py  probabilistic.py  registry.py  release_docs.py  significance.py  team_strength.py  validation.py  xg.py
tests/: __init__.py  conftest.py  test_api_live.py  test_api_observability.py  test_benchmark.py  test_champion.py  test_decision.py  test_double_poisson.py  test_evaluation.py  test_http_client.py  test_live.py  test_metrics.py  test_monitoring.py  test_pipeline.py  test_portfolio.py  test_probabilistic.py  test_registry.py  test_significance.py  test_xg.py
